--- a/Diverse London/BusinessPart/BussEmPage/BussBar.html
+++ b/Diverse London/BusinessPart/BussEmPage/BussBar.html
@@ -44,7 +44,7 @@
                 <br><br>
 
                 </h4><h4>
-                    The pre-processed data employed in this visualization page can be accessed on author's github <a href="https://zzh-h.github.io/BusinessPart/BussEmPage">click here.</a> 
+                    The pre-processed data employed in this visualization page can be accessed on author's github <a href="https://github.com/ZZH-H/zzh-h.github.io.git">@ZZH-H</a> 
                     For more information and comments on this project, please contact author's email: ucbqzz3@ucl.ac.uk
                     <br>
                 </h4>
