--- a/Diverse London/BusinessPart/BussFloor/BussFloor.html
+++ b/Diverse London/BusinessPart/BussFloor/BussFloor.html
@@ -184,7 +184,7 @@
                 <br><br>
 
                 </h4><h4>
-                    The pre-processed data employed in this visualization page can be accessed on author's github <a href="https://zzh-h.github.io/BusinessPart/BussFloor">click here.</a> 
+                    The pre-processed data employed in this visualization page can be accessed on author's github <a href="https://github.com/ZZH-H/zzh-h.github.io.git">@zzh-h</a> 
                     For more information and comments on this project, please contact author's email: ucbqzz3@ucl.ac.uk
                     <br>
                 </h4>
