--- a/Diverse London/SummaryPage/Summary.html
+++ b/Diverse London/SummaryPage/Summary.html
@@ -196,7 +196,7 @@
                 </h4>
                 <br>
                 </h4><h4>
-                    The pre-processed data employed in this visualization page can be accessed on author's github <a href="https://zzh-h.github.io/SummaryPage">click here.</a> 
+                    The pre-processed data employed in this visualization page can be accessed on author's github <a href="https://github.com/ZZH-H/zzh-h.github.io.git">@ZZH-H</a> 
                     For more information and comments on this project, please contact author's email: ucbqzz3@ucl.ac.uk
                     <br>
                 </h4>
